# pythonid-interpreter

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
pythonid/: interpreter.py
pythonid_interpreter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
static/: index.html
tests/: test_interpreter.py
