[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonid-interpreter"
version = "1.0.0"
description = "Interpreter Python dengan kata kunci Bahasa Indonesia"
authors = [{ name="NN-dev-8080-3123" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[project.scripts]
pythonid = "pythonid.interpreter:main"